Closed Bug 1223262 Opened 9 years ago Closed 9 years ago

Fix -Wunreachable-code warning in tools/profiler

Categories

(Core :: Gecko Profiler, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla45
Tracking Status
firefox45 --- fixed

People

(Reporter: cpeterson, Assigned: cpeterson)

References

Details

Attachments

(1 file)

The `continue` is not reached after the abort() in debug builds: tools/profiler/core/platform-linux.cc:363:11: warning: code will never be executed [-Wunreachable-code]
Attachment #8685241 - Flags: review?(bgirard)
Attachment #8685241 - Flags: review?(bgirard) → review+
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
Depends on: 1235502
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: