Bug 1223262 - Fix -Wunreachable-code warning in tools/profiler. r=BenWa

tools/profiler/core/platform-linux.cc:363:11: warning: code will never be executed [-Wunreachable-code]